# vibelinkmodel

./: .dockerignore  .gitignore  DOCUMENTATION OF VIBELINKMODEL-EC2-DEPLOY.docx  Dockerfile  PyPika-0.48.9-py2.py3-none-any.whl  README.md  Workflow of VibeLinkModel_EC2_FINALDEPLOY.docx  buildspec.yml  coreschema-0.0.4-py3-none-any.whl  credentials.json  db.sqlite3  docker-compose.yml  manage.py  moviepy-1.0.3-py3-none-any.whl  openapi_codec-1.3.2-py3-none-any.whl  pyproject.toml  requirements.txt  vocab.txt
JacobRyanMedia/: asgi.py  settings.py  test.py  urls.py  wsgi.py
chatbot/: urls.py  views.py
docs/: Chatdata.md  Extraction.md  bot.md
excerpt/: apps.py  calendar_utils.py  models.py  urls.py  utils.py  views.py
excerpt/migrations/: 0001_initial.py  0002_alter_excerpt_created_at_alter_excerpt_updated_at.py  0003_alter_excerpt_created_at_alter_excerpt_updated_at.py  0004_alter_excerpt_created_at_alter_excerpt_updated_at.py  0005_alter_excerpt_created_at_alter_excerpt_updated_at.py  0006_alter_excerpt_created_at_alter_excerpt_updated_at.py  0007_alter_excerpt_created_at_alter_excerpt_updated_at.py  0008_alter_excerpt_created_at_alter_excerpt_updated_at.py  0009_alter_excerpt_created_at_alter_excerpt_updated_at.py  0010_alter_excerpt_created_at_alter_excerpt_updated_at.py  0011_alter_excerpt_created_at_alter_excerpt_updated_at.py  0012_alter_excerpt_created_at_alter_excerpt_updated_at.py  (+53 more)
excerpt/templates/: index.html
helper/: helper.py
static/: app.js
staticfiles/: app.js  chatbot.29566e884360.js  staticfiles.json
template/: index.html
(+14 files in other folders)
