[tool.poetry]
name = "jacobryanmedia"
version = "0.1.0"
description = "A data extraction and AI chatbot solution"
authors = ["Damilare"]
license = "1.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.1"
sqlalchemy = "^2.0.29"
boto3 = "^1.34.80"
certifi = "^2024.2.2"
moviepy = "^1.0.3"
pydub = "^0.25.1"
python-docx = "^1.1.0"
pdfplumber = "^0.11.0"
python-multipart = "^0.0.9"
uvicorn = "^0.29.0"
django = "^5.0.4"
django-rest-swagger = "^2.2.0"
openai = "^1.17.0"
python-dotenv = "^1.0.1"
langchain-community = "^0.0.32"
langchain = "^0.1.16"
chromadb = "^0.4.24"
gunicorn = "^21.2.0"
psycopg2-binary = "^2.9.9"
whitenoise = "^6.6.0"
sockets = "^1.0.0"
django-allow-cidr = "^0.7.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

